--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@ initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script defer src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <link rel="stylesheet" href="css/main.css">
     <title>Product App</title>
 </head>
 <body>
 
 <div id="app">
-    <h1>Product Name</h1>
-    <p>{{ product }}</p>
+    <div class="product">
+        <div class="product-image">
+            <img :src="image" :alt="altText" />
+        </div>
+        <div class="product-info">
+            <h1>{{ product }}</h1>
+        </div>
+        <a :href="link">More products like this</a>
+    </div>
 
 </div>
 </body>
