--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@ initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         </div>
         <div class="product-info">
             <h1>{{ product }}</h1>
+            <p v-if="inventory > 10">In stock</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+            <p v-else>Out of stock</p>
+            <span onSale="inventory">On Sale</span>
         </div>
-        <a :href="link">More products like this</a>
+
+
     </div>
 
 </div>
