--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@ initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         </div>
         <div class="product-info">
             <h1>{{ product }}</h1>
-            <p v-if="inventory > 10">In stock</p>
-            <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
-            <p v-else>Out of stock</p>
-            <span onSale="inventory">On Sale</span>
+            <p v-if="inStock">In stock</p>
+            <p v-else>Out of Stock</p>
+            <ul>
+                <li v-for="detail in details">{{ detail }}</li>
+            </ul>
+            <div v-for="variant in variants" :key="variant.variantId">
+                <p>{{ variant.variantColor }}</p>
+            </div>
+            <li v-for="size in sizes">{{ size }}</li>
         </div>
-
-
     </div>
 
 </div>
