--- a/index.html
+++ b/index.html
@@ -23,12 +23,23 @@ initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
             <p v-if="inStock">In stock</p>
             <p v-else>Out of Stock</p>
             <ul>
+                <p style="font-size: 20px">Состав</p>
                 <li v-for="detail in details">{{ detail }}</li>
             </ul>
-            <div v-for="variant in variants" :key="variant.variantId">
-                <p>{{ variant.variantColor }}</p>
+            <div v-for="variant in variants" :key="variant.variantId" class="variant" :style="{ backgroundColor: variant.variantColor }">
+                <p @mouseover="updateProduct(variant.variantImage)">
+                    {{ variant.variantColor }}
+                </p>
             </div>
-            <li v-for="size in sizes">{{ size }}</li>
+            <ul>
+                <li v-for="size in sizes" >{{ size }}</li>
+            </ul>
+
+            <div class="cart">
+                <p>Cart({{ cart }})</p>
+            </div>
+            <button v-on:click="addToCart">Add to cart</button>
+            <button v-on:click="decreaseCart">Delete</button>
         </div>
     </div>
 
