--- a/index.html
+++ b/index.html
@@ -13,36 +13,14 @@ initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
 
-<div id="app">
-    <div class="product">
-        <div class="product-image">
-            <img :src="image" :alt="altText" />
-        </div>
-        <div class="product-info">
-            <h1>{{ title }}</h1>
-            <p v-if="inStock">In stock</p>
-            <p v-else :class="{ 'line-through': !inStock }">Out of Stock</p>
-            <ul>
-                <p style="font-size: 20px">Состав</p>
-                <li v-for="detail in details">{{ detail }}</li>
-            </ul>
-            <div v-for="(variant, index) in variants" :key="variant.variantId"
-                 class="variant" :style="{ backgroundColor: variant.variantColor }" @mouseover="updateProduct(index)">
-            </div>
-            <ul>
-                <li v-for="size in sizes" >{{ size }}</li>
-            </ul>
 
-            <div class="cart">
-                <p>Cart({{ cart }})</p>
-            </div>
-            <button v-on:click="addToCart" :disabled="!inStock"
-                    :class="{ disabledButton: !inStock }">Add to cart</button>
-            <button v-on:click="decreaseCart" :disabled="!inStock"
-                    :class="{ disabledButton: !inStock }">Delete</button>
-        </div>
-    </div>
+
+<div id="app">
+    <product :premium="premium"></product>
+    <product-details></product-details>
 
 </div>
+
+
+
 </body>
-</html>
